--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ install:
    - git clone --depth=50 --branch=master https://github.com/CameronCT/ezPHP.git
 
 script:
-   - cd libs
+   - cd src
    - php autoload.php
